===========
 Changelog
===========

1.1 (unreleased)
================

- Nothing changed yet.


1.0 (2009-11-21)
================

- Supporting the user defined fields feature of address book.

- Added migration code to add importer to exising address books.


0.9.1 (2009-09-28)
==================

- Fixing brown bag release: only namespace packages were installed.


0.9 (2009-09-28)
================

- Extracted importer from icemac.addressbook, to make it optional and
  easily extendable.